@@ -1,4 +1,4 @@
-.TH HDPARM 8 "February 2006" "Version 6.5"
+.TH HDPARM 8 "March 2006" "Version 6.6"
 
 .SH NAME
 hdparm \- get/set hard disk parameters
